SUBDIRS = \
	atrac3 \
	audio \
	base \
	ctrl \
	debug \
	display \
	dmac \
	fpu \
	ge \
	gu \
	gum \
	hprm \
	kernel \
	libcglue \
	libpthreadglue \
	modinfo \
	mp3 \
	mpeg \
	nand \
	net \
	openpsid \
	power \
	prof \
	registry \
	rtc \
	sircs \
	sdk \
	startup \
	umd \
	usb \
	usbstor \
	user \
	vaudio \
	utility \
	vfpu \
	video \
	vsh \
	wlan \
	kermit \
	samples
