
bin_PROGRAMS = bin2s bin2c bin2o pack-pbp unpack-pbp mksfo mksfoex psp-config psp-build-exports psp-prxgen psp-fixup-imports

bin2s_SOURCES = bin2s.c
bin2c_SOURCES = bin2c.c
bin2o_SOURCES = bin2o.c

pack_pbp_SOURCES = pack-pbp.c
unpack_pbp_SOURCES = unpack-pbp.c

mksfo_SOURCES = mksfo.c

mksfoex_SOURCES = mksfoex.c

psp_config_SOURCES = psp-config.c getopt_long.c

psp_build_exports_SOURCES = psp-build-exports.c getopt_long.c sha1.c

psp_prxgen_SOURCES = psp-prxgen.c getopt_long.c

psp_fixup_imports_SOURCES = psp-fixup-imports.c getopt_long.c sha1.c

noinst_HEADERS = elftypes.h getopt.h prxtypes.h sha1.h types.h
